补全Statement实现